Android Mobile App Example for learning

--- a/mobile/music-makers-android/app/src/main/res/layout/activity_main.xml
+++ b/mobile/music-makers-android/app/src/main/res/layout/activity_main.xml
@@ -22,5 +22,8 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
+        app:itemIconSize="25dp"
+        app:itemIconTint="@null"
+
         app:menu="@menu/activity_main_drawer" />
 </androidx.drawerlayout.widget.DrawerLayout>
