--- a/mobile/music-makers-android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/mobile/music-makers-android/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@id/nav_home"> <fragment
+    android:id="@+id/nav_home"
+    android:name="br.com.musicmaker.ui.home.HomeFragment"
+    android:label="Music Makers"
+    tools:layout="@layout/fragment_home" >
 
-    <fragment
-        android:id="@+id/nav_home"
-        android:name="br.com.musicmaker.ui.home.HomeFragment"
-        android:label="Music Makers"
-        tools:layout="@layout/fragment_home" />
+    <action
+        android:id="@+id/action_nav_home_to_loginFragment"
+        app:destination="@id/loginFragment" />
+</fragment>
 
     <fragment
         android:id="@+id/nav_gallery"
@@ -22,4 +25,15 @@
         android:name="br.com.musicmaker.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="br.com.musicmaker.LoginFragment"
+        android:label="LoginFragment"
+        tools:layout="@layout/fragment_login">
+
+        <action
+            android:id="@+id/action_loginFragment_to_nav_home"
+            app:destination="@id/nav_home" />
+    </fragment>
 </navigation>
