--- a/mobile/music-makers-android/app/src/main/res/values/colors.xml
+++ b/mobile/music-makers-android/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#0A214A</color>     <!-- Azul claro vibrante -->
-    <color name="purple_500">#0A214A</color>     <!-- Azul forte principal -->
-    <color name="purple_700">#0A214A</color>     <!-- Azul escuro para contraste -->
-    <color name="teal_200">#FFFFA040</color>       <!-- Laranja claro -->
-    <color name="teal_700">#FFFF6B00</color>       <!-- Laranja brilhante -->
+    <color name="cor_primaria">#2c3e50</color>
+    <color name="cor_secundaria">#f39c12</color>
+
+    <color name="purple_200">#0A214A</color>
+    <color name="purple_500">#0A214A</color>
+    <color name="purple_700">#0A214A</color>
+    <color name="teal_200">#FFFFA040</color>
+    <color name="teal_700">#FFFF6B00</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cor_fundo">#f8f9fa</color>
 </resources>
