--- a/mobile/music-makers-android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/mobile/music-makers-android/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,37 +3,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/nav_home"> <fragment
-    android:id="@+id/nav_home"
-    android:name="br.com.musicmaker.ui.home.HomeFragment"
-    android:label="Music Makers"
-    tools:layout="@layout/fragment_home" >
-
-    <action
-        android:id="@+id/action_nav_home_to_loginFragment"
-        app:destination="@id/loginFragment" />
-</fragment>
+    app:startDestination="@id/webFragment">
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="br.com.musicmaker.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_home"
+        android:name="br.com.musicmaker.ui.home.HomeFragment"
+        android:label="Music Makers"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="br.com.musicmaker.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/loginFragment"
         android:name="br.com.musicmaker.LoginFragment"
-        android:label="LoginFragment"
+        android:label="Login"
         tools:layout="@layout/fragment_login">
 
         <action
-            android:id="@+id/action_loginFragment_to_nav_home"
-            app:destination="@id/nav_home" />
+            android:id="@+id/action_loginFragment_to_webFragment"
+            app:destination="@id/webFragment"
+            app:popUpTo="@id/webFragment"
+            app:popUpToInclusive="true" />
     </fragment>
+
+
+    <fragment
+        android:id="@+id/webFragment"
+        android:name="br.com.musicmaker.WebFragment"
+        android:label="Music Makers"
+        tools:layout="@layout/fragment_web" >
+
+        <action
+            android:id="@+id/action_webFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+
 </navigation>
